--- a/src/index.css
+++ b/src/index.css
@@ -201,10 +201,18 @@ ol {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: space-evenly;
   background-color: rgba(40, 38, 23, 0.95);
   animation: pop-in 0.5s cubic-bezier(0.68, -0.55, 0.65, 0.52) forwards;
+}
+
+#game-over .buttons {
+  display: flex;
+  width: 100%;
+
+  justify-content: space-evenly;
+
 }
 
 #game-over h2 {
