--- a/src/index.css
+++ b/src/index.css
@@ -102,10 +102,24 @@ h1 {
 .player {
   display: flex;
   align-items: center;
+
   border: 2px solid transparent;
   padding: 0.5rem;
   border-radius: 4px;
   font-weight: bold;
+}
+
+.player .ai-checkbox {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 20px;
+  border-radius: 50%;
+  margin-right: 1rem;
+  cursor: pointer;
 }
 
 .player-name {
