--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-/* Base styles (unchanged) */
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Roboto+Slab:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +7,9 @@
 html {
   font-family: 'Roboto Slab', sans-serif;
   line-height: 1.5;
+
   color: #ebe7ef;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -64,6 +67,7 @@ h1 {
 
 #players li {
   display: flex;
+
   justify-content: center;
   width: 50%;
   border: 2px solid transparent;
@@ -98,11 +102,13 @@ h1 {
 .player {
   display: flex;
   align-items: center;
+
   border: 2px solid transparent;
   padding: 0.5rem;
   border-radius: 4px;
   font-weight: bold;
 }
+
 
 .player-name {
   display: inline-block;
@@ -190,6 +196,7 @@ ol {
 #game-over {
   position: absolute;
   display: flex;
+
   top: 0;
   left: 0;
   width: 100%;
@@ -205,7 +212,9 @@ ol {
 #game-over .buttons {
   display: flex;
   width: 100%;
+
   justify-content: space-evenly;
+
 }
 
 #game-over h2 {
@@ -289,7 +298,6 @@ ol {
   margin-top: 1.5rem;
 }
 
-/* Animations (unchanged) */
 @keyframes slide-in-from-left {
   0% {
     opacity: 0;
@@ -347,6 +355,7 @@ ol {
   }
 }
 
+/* Fancy animation for showing the "Game Over" element */
 @keyframes pop-in {
   0% {
     transform: scale(0);
