fixing font compitabilty

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ header img {
 }
 
 h1 {
-  font-family: 'Arial', cursive;
+  font-family: 'Arial', sans-serif;
   font-size: 3rem;
   margin: 0 auto 3rem auto;
   color: #3f3b00;
@@ -154,7 +154,7 @@ ol {
   background: none;
   color: #f8c031;
   border: none;
-  font-family: 'Arial', cursive;
+  font-family: 'Arial',sans-serif;
   font-size: 4rem;
   text-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
   animation: pulse-text-size 2s infinite ease-out;
@@ -187,7 +187,7 @@ ol {
   color: #3f3b00;
   font-size: 5rem;
   cursor: pointer;
-  font-family: 'Arial', cursive;
+  font-family: 'Arial',sans-serif;
   padding: 1rem;
 }
 
@@ -216,7 +216,7 @@ ol {
 }
 
 #game-over h2 {
-  font-family: 'Arial', cursive;
+  font-family: 'Arial',sans-serif;
   font-size: 4rem;
   text-align: center;
   color: #fcd256;
@@ -276,7 +276,7 @@ ol {
 }
 
 #game-hints h2 {
-  font-family: 'Arial', cursive;
+  font-family: 'Arial',sans-serif;
   font-size: 2rem;
   margin: 0;
 }
